URL && JsonParser Constructor was deprecated